[+] Añadidas coeficientes octavas.

--- a/acoustic-multitool.html
+++ b/acoustic-multitool.html
@@ -410,7 +410,7 @@
                         </td>
                       </tr>
                       <tr>
-                        <td>Paredes</td>
+                        <td>Pared A</td>
                         <td>
                           <input id="pared_125_a" class="coef-input" placeholder="" />
                           <span class="focus-border"></span>
@@ -437,7 +437,7 @@
                         </td>
                       </tr>
                       <tr>
-                        <td>Paredes</td>
+                        <td>Pared B</td>
                         <td>
                           <input id="pared_125_b" class="coef-input" placeholder="" />
                           <span class="focus-border"></span>
@@ -464,7 +464,7 @@
                         </td>
                       </tr>
                       <tr>
-                        <td>Paredes</td>
+                        <td>Pared C</td>
                         <td>
                           <input id="pared_125_c" class="coef-input" placeholder="" />
                           <span class="focus-border"></span>
@@ -491,7 +491,7 @@
                         </td>
                       </tr>
                       <tr>
-                        <td>Paredes</td>
+                        <td>Pared D</td>
                         <td>
                           <input id="pared_125_d" class="coef-input" placeholder="" />
                           <span class="focus-border"></span>
@@ -524,13 +524,12 @@
               <div align="center">
                 <a href="#mark-list-octaves">
                   <button class="calculate-button" onclick="optionGetReverberationTimeOctaves(
-                  'techo_125','techo_250','techo_500','techo_1000','techo_2000','techo_4000'
+                  'techo_125','techo_250','techo_500','techo_1000','techo_2000','techo_4000',
                   'suelo_125','suelo_250','suelo_500','suelo_1000','suelo_2000','suelo_4000',
                   'pared_125_a','pared_250_a','pared_500_a','pared_1000_a','pared_2000_a','pared_4000_a',
                   'pared_125_b','pared_250_b','pared_500_b','pared_1000_b','pared_2000_b','pared_4000_b',
                   'pared_125_c','pared_250_c','pared_500_c','pared_1000_c','pared_2000_c','pared_4000_c',
-                  'pared_125_d','pared_250_d','pared_500_d','pared_1000_d','pared_2000_d','pared_4000_d')"
-                  >calcular tiempo de reverberación</button>
+                  'pared_125_d','pared_250_d','pared_500_d','pared_1000_d','pared_2000_d','pared_4000_d')">calcular tiempo de reverberación</button>
                 </a>
               </div>
               <div id="mark-list-octaves"></div>
