[+] Añadido nuevo estilo y canvas de puntos sugeridos.

--- a/acoustic-multitool.html
+++ b/acoustic-multitool.html
@@ -267,8 +267,25 @@
                   <p>
                 </div>
               </details>
+
               <button class="menu-button" onclick="optionGetShortList()"><a>Obtener terna de puntos</a></button>
+
               <div id="suggested-list"></div>
+
+              <div class="canvas-suggested-display">
+                <div class="suggested-planta">
+                  <h2><i>Planta</i></h2>
+                  <canvas id="suggestedPlanta" width="300" height="300" style="border:1px solid #000000;">
+                  Please use a browser that supports "canvas"
+                </div>
+
+                <div class="suggested-alzado">
+                  <h2><i>Alzado</i></h2>
+                  <canvas id="suggestedAlzado"  width="300" height="300" style="border:1px solid #000000;">
+                  Please use a browser that supports "canvas"
+                </div>
+              </div>
+
               <div id="info-suggested-list"></div>
             </div>
             <div class="empty"></div>
